Precedence of ff and fff changed to be the same as ??!!
git-svn-id: http://svn.pugscode.org/pugs@23889 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -38,11 +38,11 @@ levels. (Perl 5 has 23!)  Here we list the levels from "tightest" to
     Junctive and (all)  &
     Junctive or (any)   | ^
     Named unary         rand sleep abs
-    Nonchaining infix   but does <=> leg cmp .. ..^ ^.. ^..^ ff fff
+    Nonchaining infix   but does <=> leg cmp .. ..^ ^.. ^..^
     Chaining infix      != == < <= > >= eq ne lt le gt ge ~~ === eqv !eqv
     Tight and           &&
     Tight or            || ^^ // min max
-    Conditional         ?? !!
+    Conditional         ?? !! ff fff
     Item assignment     = := ::= => += -= **= xx= .=
     Loose unary         true not
     Comma operator      ,
