typo from Aaron Crane++
git-svn-id: http://svn.pugscode.org/pugs@23895 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -766,7 +766,7 @@ in the absence of explicit initialization, native floating-point types
 default to NaN, while integer types (including C<bit>) default to 0.
 The complex type defaults to NaN + NaN.i.  A buf type of known size
 defaults to a sequence of 0 values.  If any native type is explicitly
-initialized to C<*> (the C<Whatever> type), it is left unitialized.
+initialized to C<*> (the C<Whatever> type), it is left uninitialized.
 
 If a buf type is initialized with a Unicode string value, the string
 is decomposed into Unicode codepoints, and each codepoint shoved into
