--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 31 Aug 2007
+  Last Modified: 4 Sep 2007
   Number: 2
-  Version: 116
+  Version: 117
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -121,7 +121,7 @@ counts as whitespace equivalent to a newline.
 
 =item *
 
-Except when quoted, a C<#> character always introduces a comment in
+Except within a string literal, a C<#> character always introduces a comment in
 Perl 6.  There are two forms of comment based on C<#>.  Embedded
 comments require the C<#> to be followed by one
 or more opening bracketing characters.
