typo from [particle]++
git-svn-id: http://svn.pugscode.org/pugs@23901 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1280,7 +1280,7 @@ any named capture:
 
     <alpha>     # match a letter and capture in $<alpha>
     <+alpha>    # match a letter, don't capture
-    <?alpha>    # much null before a letter, don't capture
+    <?alpha>    # match null before a letter, don't capture
 
 =item *
 
