typo spotted by sunnavy++
git-svn-id: http://svn.pugscode.org/pugs@23902 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -2830,7 +2830,7 @@ consistently prefixing numeric, stringwise, and boolean operators
 with C<+>, C<~> and C<?> respectively to indicate whether the bitwise
 operation is done on a number, a string, or a single bit.
 But that's just a naming convention, and if you wanted to add a new
-bitwise C<¬> operator, you'd have the add the C<+¬>, C<~¬>, and C<?¬>
+bitwise C<¬> operator, you'd have to add the C<+¬>, C<~¬>, and C<?¬>
 operators yourself.  Similarly, the carets that exclude the endpoints
 on ranges are there by convention only.
 
