extra \ found by sunnavy++
git-svn-id: http://svn.pugscode.org/pugs@23903 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -3632,7 +3632,7 @@ as if its colon changed back to a comma.
 If you already have a capture variable, you can interpolate all of
 its bits at once using the C<< prefix:<|> >> operator:
 
-    my \$capture := func();
+    my $capture := func();
     push |$capture;
 
 =head1 Traversing arrays in parallel
